# minho_team_pihw

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  main  package.xml  rosDaemon.cpp
include/: .mcp3008.h.swp  Omni3MD.h  alarm.h  hwdefines.h  mcp3008.h  mcp3k8.h  omni3md_defines.h  rttimer.h
include/Ada10Dof/: Ada10Dof.h  ada10dof_defines.h
include/Alarm/: alarm.h
include/MCP3k8/: mcp3k8.h
include/Omni3MD/: Omni3MD.h  omni3md_defines.h
include/utilities/: alarm.h  hwdefines.h  utils.h
src/: 2  Omni3MD.cpp  main.c  main.cpp  mcp3008.c  mcp3k8.cpp
src/Ada10Dof/: Ada10Dof.cpp
src/Alarm/: alarm.cpp
src/MCP3k8/: mcp3k8.cpp
src/Omni3MD/: Omni3MD.cpp
temp/: CMakeLists.txt  main  main.cpp
utils/: installation  output.csv  output1.csv  output2.csv  outputZ.csv
